# riscv-vm

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.rs  device_tree_blob.dtb  device_tree_source.dts  fs.img
c_test/: Makefile  binary.sh  build.sh  build_asm.sh  debug.c  debug.h  fib.c  fib.s  fs.img  hello.c  hello.s  kernel.txt  libc_test.c  op_tests.asm  print_out.s  stdprintf.s  test.c  test.s
linux_kernel/: kernel  kernel.sym
src/: bus.rs  cpu.rs  csr.rs  interrupt.rs  lib.rs  logging.rs  registers.rs  rom.rs  trap.rs  virtual_memory.rs
src/devices/: clint.rs  mod.rs  plic.rs  uart.rs  viritio.rs  virtio.rs
src/instruction_sets/: instructions.rs  mod.rs  rv32i.rs
src/memory/: dram.rs  mod.rs  virtual_memory.rs
tests/: helper.rs  helper.rs.old  riscv-tests.rs  rv32i.rs.old
tests/rvtests/: rv32mi_p_breakpoint  rv32mi_p_csr  rv32mi_p_illegal  rv32mi_p_lh_misaligned  rv32mi_p_lw_misaligned  rv32mi_p_ma_addr  rv32mi_p_ma_fetch  rv32mi_p_mcsr  rv32mi_p_sbreak  rv32mi_p_scall  rv32mi_p_sh_misaligned  rv32mi_p_shamt  rv32mi_p_sw_misaligned  rv32mi_p_zicntr  rv32si_p_csr  rv32si_p_dirty  rv32si_p_ma_fetch  rv32si_p_sbreak  rv32si_p_scall  rv32si_p_wfi  rv32ua_p_amoadd_w  rv32ua_p_amoand_w  rv32ua_p_amomax_w  rv32ua_p_amomaxu_w  rv32ua_p_amomin_w  rv32ua_p_amominu_w  rv32ua_p_amoor_w  rv32ua_p_amoswap_w  rv32ua_p_amoxor_w  rv32ua_p_lrsc  rv32ua_v_amoadd_w  rv32ua_v_amoand_w  rv32ua_v_amomax_w  rv32ua_v_amomaxu_w  rv32ua_v_amomin_w  rv32ua_v_amominu_w  rv32ua_v_amoor_w  rv32ua_v_amoswap_w  rv32ua_v_amoxor_w  rv32ua_v_lrsc  (+230 more)
