[package]
name = "riscv-vm"
version = "0.2.1"
edition = "2021"

[lib]
crate-type = ["rlib"]

[features]
default = []

logging = ["dep:colored", "dep:log", "dep:fern"] # Enable for logging output

[dependencies]
bit_ops = "0.1.13"
bitfield = "0.17.0"
chrono = "0.4.38"

# logging
colored = { version = "2.1.0", optional = true }
log = { version = "0.4.22", optional = true }
fern = { version = "0.7.0", optional = true, features = ["colored"] }
thiserror = "1.0.65"
either = "1.13.0"

[dependencies.devicetree-tool]
git = "https://github.com/RamenG0D/devicetree-tool.git"

[dependencies.riscv-decoder]
# git = "https://github.com/RamenG0D/riscv-decoder.git"
path = "riscv-decoder"
