[package]
name = "riscv-vm"
version = "0.2.1"
edition = "2021"

[lib]
crate-type = ["rlib"]

[dependencies]
bit_ops = "0.1.13"
bitfield = "0.18.1"
chrono = "0.4.38"

# logging
colored = "3.0.0"
log = "0.4.22"
fern = { version = "0.7.0", features = ["colored"] }
thiserror = "2.0.11"
either = "1.13.0"

[dependencies.devicetree-tool]
git = "https://github.com/RamenG0D/devicetree-tool.git"

[dependencies.riscv-decoder]
git = "https://github.com/RamenG0D/riscv-decoder.git"
